--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./dns/kouidri.zone:/etc/bind/kouidri.zone
       - ./dns/named.conf.local:/etc/bind/named.conf.local
   web:
-    image: web-page
+    build: ./web-server/.
     networks:
       - dmz
 
