--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,15 @@ services:
   dns:
     image: defreitas/dns-proxy-server
     networks:
-      - dmz
+      dmz:
+        ipv4_address: 172.20.1.2
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/resolv.conf:/etc/resolv.conf
       - ./dns/conf:/app/conf
     hostname: dns.kouidri.fr
+    ports:
+      - "53/udp"
       
 
   web:
