--- a/dns/conf/config.json
+++ b/dns/conf/config.json
@@ -1,6 +1,6 @@
 {
 	"version": 2,
-	"remoteDnsServers": ["100.4.0.1", "1.1.1.1"],
+	"remoteDnsServers": ["100.4.0.1","100.4.0.3", "1.1.1.1"],
 	"envs": [
 		{
 			"name": ""
