--- a/debug/Dockerfile
+++ b/debug/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get update && apt-get install -y \
     iputils-ping \
     iproute2 \
     wget \
+    curl \
+    traceroute \
     && rm -rf /var/lib/apt/lists/*
 
 CMD /bin/bash
