--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,16 @@ services:
       - 953/tcp
 
 
+  proxy:
+    image: ubuntu/squid
+    ports:
+      - "8080:3128"
+    restart: always
+    hostname: proxy.kouidri.fr
+    networks:
+      - dmz
+
+
 networks:
   dmz: 
     ipam:
